force-app/main/default/objects/Book__c/fields/Days_since_publication__c.field-meta.xml
<CustomField>
    <fullName>Days_since_publication__c</fullName>
    <formula>TODAY() - Publish_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since publication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>