force-app/main/default/objects/Book__c/fields/Edition_Language__c.field-meta.xml
<CustomField>
    <fullName>Edition_Language__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edition Language</label>
    <referenceTo>Edition_Language__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>