force-app/main/default/objects/Book__c/validationRules/Max_discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_discount</fullName>
    <active>true</active>
    <description>Max discount must be less or equal than 30%</description>
    <errorConditionFormula>Discount_Percent__c &gt; 0.30</errorConditionFormula>
    <errorMessage>Max discount must be less or equal than 30%</errorMessage>
</ValidationRule>