force-app/main/default/objects/Book__c/validationRules/Price_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_greater_than_0</fullName>
    <active>true</active>
    <description>The price must be greater than 0</description>
    <errorConditionFormula>Price__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>The price must be greater than 0</errorMessage>
</ValidationRule>