force-app/main/default/objects/Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Publisher__c</columns>
    <columns>Price__c</columns>
    <columns>Discount_Percent__c</columns>
    <columns>Discount_Price__c</columns>
    <columns>Edition_Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>